theme beautify Asu1tty/blog_source@1754e799c9b7f9a92108605809fcf94bcbb74183

--- a/themes/hugo-theme-stack/assets/scss/partials/article.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/article.scss
@@ -276,3 +276,9 @@
         }
     }
 }
+/* 代码块样式 */
+code {
+    border-radius: var(--tag-border-radius);
+    font-size: 14px; // Add font size setting for code block
+    font-family: var(--code-font-family);
+}
